[metadata]
name = send_display
version = 0.1
author = Laureote Loic
author_email = laureote-loic@hotmail.fr
description = Send display transaction
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
install_requires =
    pandas
    jsonschema
    flask
    cryptography
    pytest

[options.entry_points]
console_scripts =
    send_display = send_display.display_manager:main

[options.package_data]
* = *.md

